Using ProtoBuffers -- Google API http://code.google.com/apis/protocolbuffers/docs/overview.html

--- a/suclient/Makefile
+++ b/suclient/Makefile
@@ -1,18 +1,24 @@
 CC	= g++
 
-CFILES  = main.cpp
+CFILES  = main.cpp player.pb.cc
 
-OBJS	= main.o
+EXEC 	= main
+
+OBJS	= main.o player.pb.o
+
 LINKER = -lGL -lXxf86vm -lXext -lX11
-LIB = -lIrrlicht
+
+LIB = -lIrrlicht -lprotoc
+
 INCLUDE = -L/usr/X11R6/lib
+
 all: cfiles compile clean
 
 cfiles: $(CFILES)
 	$(CC) -c $(CFILES)
 
 compile: $(OBJS)
-	$(CC) -o main $(CFILES) $(LIB) $(INCLUDE) $(LINKER)
+	$(CC) -o $(EXEC) $(CFILES) $(LIB) $(INCLUDE) $(LINKER)
 
 clean:
 	rm -f $(OBJS)
